# ybtop

./: CHANGELOG.md  README.md  pyproject.toml
src/ybtop/: cli.py  config.py  db.py  log.py  merge.py  pg_stat_display.py  queries.py  serve.py  snapshot_write.py  table_schema.py
src/ybtop/web/: app.js  index.html  style.css
